--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
              <div>
                  <figure>
                      <img class="imagens" src="./O senhor dos anéis.png" alt="">
-                     <figcaption>O senhor dos anéis</figcaption>
+                     <figcaption>O senhor dos Anéis</figcaption>
                  </figure>
              </div>
              <div>
@@ -81,10 +81,14 @@
 
         </main>
     <footer>
+        
           <p>© Prime Video © Prime•Video © & ™ Aneis do Poder LTD © 2022 MARVERICK. Reservados todos os direitos, Prime Video</p>
-          <img class="imgfooter1" src="./youtube--v1 1.png" alt="">
-          <img class="imgfooter2" src="./instagram.png" alt="">
-          <img class="imgfooter3" src="./image 8.png" alt="">
+        <section class="conteiner2">
+          <img class="imgfooter" src="./youtube--v1 1.png" alt="">
+          <img class="imgfooter" src="./instagram.png" alt="">
+          <img class="imgfooter" src="./image 8.png" alt="">
+        </section>
+        
     </footer>
 </body>
 </html>
